--- a/src/Month3/Eventify/pom.xml
+++ b/src/Month3/Eventify/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>eventify</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Eventify</name>
-	<description>An event management system.</description>
+	<description>An event management system with authentication.</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -46,6 +46,33 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- Spring security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- JSON web tokens -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.12.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.12.3</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.12.3</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- H2 database -->
