--- a/src/Month3/Eventify/src/main/resources/application.properties
+++ b/src/Month3/Eventify/src/main/resources/application.properties
@@ -15,10 +15,19 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 
 # File Upload Configuration
-spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Swagger/OpenAPI Configuration
+# JWT Configuration
+jwt.secret=mySecretKeyForEventifyApplicationThatIsAtLeast256BitsLong
+jwt.expiration=86400000
+
+# Swagger Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+
+# Logging
+logging.level.com.api.eventify=DEBUG
+logging.level.org.springframework.security=DEBUG
