--- a/src/Month3/Eventify/src/main/resources/application.properties
+++ b/src/Month3/Eventify/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # JWT Configuration
-jwt.secret=mySecretKeyForEventifyApplicationThatIsAtLeast256BitsLong
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # Swagger Configuration
